--- a/src/assets/stylesheets/hero.module.scss
+++ b/src/assets/stylesheets/hero.module.scss
@@ -2,7 +2,7 @@ body {
   font-family: Consolas, 'Courier New', monospace;
 }
 
-section {
+.section {
   background-color: #1E1E1E;
   color: white;
   display: flex;
@@ -10,6 +10,8 @@ section {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
+  top: 4%;
 }
 
 .title {
@@ -21,5 +23,28 @@ section {
 }
 
 .objectInfo {
-  margin-left: 1rem;
+  margin-left: 2.5rem;
+}
+
+.objectClosing {
+  position: relative;
+}
+
+.writeEffect {
+  width: 0.2rem;
+  height: 2rem;
+  background-color: white;
+  position: absolute;
+  animation: 1s fade infinite;
+  margin-left: 0.3rem;
+}
+
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
