--- a/src/assets/stylesheets/navBarTop.module.scss
+++ b/src/assets/stylesheets/navBarTop.module.scss
@@ -1,9 +1,11 @@
 .section {
   background-color: #242424;
   position: absolute;
-  width: 88%;
+  width: 100%;
   height: 4%;
   display: flex;
+  z-index: 3;
+  position: fixed;
 }
 
 .link {
