--- a/src/assets/stylesheets/aboutMe.module.scss
+++ b/src/assets/stylesheets/aboutMe.module.scss
@@ -22,7 +22,8 @@
 
 .innerDiv {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-content: center;
   width: 100%;
 }
 
@@ -32,6 +33,7 @@
 }
 
 .object {
+  max-width: 80%;
   font-size: 1.2rem;
   .objectInfo {
     margin-left: 2rem;
@@ -50,4 +52,12 @@
     line-height: 2rem;
     margin: 0.8rem 0 0 2rem;
   }
+}
+
+.experienceContent {
+  line-height: 2rem;
+}
+
+.closingSquare {
+  margin-left: -2rem;
 }
