Fix stylelint errors

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 }
 
 .constNameBlue {
-  color: #80C5EB;
+  color: #80c5eb;
 }
 
 .curlyBraces {
@@ -15,7 +15,7 @@
 }
 
 .active {
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   border: none;
 }
 
@@ -24,5 +24,5 @@
 }
 
 .number {
-  color: #A8BD98;
+  color: #a8bd98;
 }
