--- a/src/assets/stylesheets/hero.module.scss
+++ b/src/assets/stylesheets/hero.module.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .section {
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: white;
   display: flex;
   flex-direction: column;
