--- a/src/assets/stylesheets/projectsSection.module.scss
+++ b/src/assets/stylesheets/projectsSection.module.scss
@@ -1,5 +1,5 @@
 .section {
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: white;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,7 @@
 .title {
   display: flex;
   justify-content: center;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   font-size: 3rem;
   position: absolute;
   top: 4%;
