Add safe clause to mobile size

--- a/src/assets/stylesheets/hero.module.scss
+++ b/src/assets/stylesheets/hero.module.scss
@@ -54,3 +54,19 @@ body {
     opacity: 0;
   }
 }
+
+@media (max-width: 768px) {
+  .title {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    .titleText {
+      margin-left: 2rem;
+    }
+  }
+
+  .button {
+    font-size: 1.2rem;
+  }
+}
