--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,14 @@ code {
     'Courier New',
     monospace;
 }
+
+.onlyDesktop {
+  text-align: center;
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Courier New',
+    monospace;
+}
